--- a/reference/openweathermap.v1.yaml
+++ b/reference/openweathermap.v1.yaml
@@ -290,6 +290,12 @@ paths:
                   - id
                   - name
                   - cod
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/unauthorized_response'
       operationId: get-weather
       security:
         - app_id: []
@@ -343,6 +349,17 @@ components:
         - lastName
         - email
         - emailVerified
+    unauthorized_response:
+      title: unauthorized_response
+      type: object
+      properties:
+        cod:
+          type: integer
+        '':
+          type: string
+      required:
+        - cod
+        - ''
   securitySchemes:
     app_id:
       name: appid
